# explore-then-commit

./: .clang-format  CMakeLists.txt  readme.md
include/: arm.hh  arm.hpp  artie.hh  distribution.hh  etc.hh  etc.hpp  statistics.hh
python/: agent.py  arm.py  main.py  statistics.py
scripts/: run.sh
src/: artie.cc  etc.cc
